--- a/Website/about.html
+++ b/Website/about.html
@@ -36,7 +36,7 @@
 					<div class="flex flex-2">
 						<article>
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="Pic 01" />
+								<img src="images/waterloo.png" alt="Pic 01" />
 							</div>
 							<header>
 								<h3>Contact Us through email and consult for FREE now</h3>
@@ -48,7 +48,7 @@
 						</article>
 						<article>
 							<div class="image fit">
-								<img src="images/pic02.jpg" alt="Pic 02" />
+								<img src="images/uoft.png" alt="Pic 02" />
 							</div>
 							<header>
 								<h3>Want more advanced planing? Ask us about the Dream School Plan!</h3>
