--- a/Website/contact.html
+++ b/Website/contact.html
@@ -34,6 +34,7 @@
 					<h1>Our organization can provide you with hundreds of examples of successful applicants, past AP/SAT/SAT II/ACT exams</h1>
 					<h1>We also offer quality essay writing and editing services.</h1>
 					<h1>Feel free to ask us about it.</h1>
+					<h2>Ivy Dream Corporation</h2>
 					<h2>Email: info@ivydreamedu.com</h2>
 					<h2>Phone: 416-708-3328</h2>
 
@@ -48,7 +49,7 @@
 				<div class="inner">
 					<div class="flex">
 						<div class="copyright">
-							&copy; Ivy Dream. Design: <a href="https://jinhuang.ml">Jin Huang</a>
+							&copy; 2019 Ivy Dream Corporation. Design: <a href="https://jinconghuang.com">Jin Huang</a>
 						</div>
 						<ul class="icons">
 							
