--- a/Website/index_zh.html
+++ b/Website/index_zh.html
@@ -18,10 +18,10 @@
 					<a href="index.html" class="logo">Ivy Dream</a>
 					
 					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="about.html">About Us</a>
-						<a href="contact.html">Contact Us</a>
-						<a href="index_zh.html">中文</a>
+						<a href="index_zh.html">首页</a>
+						<a href="about.html">名校团队</a>
+						<a href="contact.html">联系我们</a>
+						<a href="index.html">English</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -29,8 +29,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1>Start your path here.</h1>
-				<p>Prepare for the SAT. Get ready for AP exams. Write brilliant essays.</p>
+				<h1>冲刺藤校之路</h1>
+				<h2 class="white-text">SAT/AP 冲刺班. 360度留学规划服务. 专业多对一网课. 文书修改.</h2>
 			</section>
 
 		<!-- One -->
@@ -40,7 +40,7 @@
 					<div class="flex flex-3">
 						<article>
 							<header>
-								<h3>Plan your exams<br /> </h3>
+								<h3>SAT考前冲刺<br /> </h3>
 							</header>
 							<p>What exams are needed? <br />
 							   What subject tests are right for you?<br />
@@ -128,3 +128,10 @@
 
 	</body>
 </html>
+
+<style>
+	.white-text {
+	  color: white;
+	}
+  </style>
+  
