added 2 chinese sites

--- a/Website/index_zh.html
+++ b/Website/index_zh.html
@@ -20,7 +20,7 @@
 					<nav id="nav">
 						<a href="index_zh.html">首页</a>
 						<a href="about_zh.html">名校团队</a>
-						<a href="contact_zh.html">联系我们</a>
+						<a href="contact_zh.html">课程报名</a>
 						<a href="index.html">English</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
@@ -33,6 +33,7 @@
 				<h2 class="white-text">美国·加拿大高中留学规划. 专业一对一网课. 文书修改.</h2>
 				<h3 class="white-text">10月/11月SAT和AP冲刺班现在火热招生中</h3>
 				<a href="contact_zh.html" class="button special">我要报名</a>
+				<
 			</section>
 
 		<!-- One -->
@@ -90,7 +91,7 @@
 								<img src="images/exam.jpg" alt="Pic 01" />
 							</div>
 							<header>
-								<h3>关注公众号免费领取资源</h3>
+								<h3>关注公众号免费领取资源<h3>
 							</header>
 							<p>现有考题：SAT：2017 5月, 2017 6月，2017 7月 .... <br />
 										ACT 2015年前全套
